# AWS_RAG

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml
.kiro/specs/aws-native-rag-service/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: git-bash-shell.md
docs/: 1_aws_rag_infra.md  2_Cloud_Native_RAG_Project_Plan.docx  2_Cloud_Native_RAG_Project_Plan.md  3_DEVELOPMENT_AND_DEPLOYMENT_GUIDE.md  4_specs.md
frontend/: Dockerfile  app.py  requirements.txt
lambdas/: __init__.py
lambdas/evaluation/: __init__.py
lambdas/evaluation/evaluator/: __init__.py  handler.py
lambdas/ingestion/: __init__.py
lambdas/ingestion/chunker/: __init__.py  handler.py
lambdas/query/: __init__.py
lambdas/shared/: __init__.py  cache_service.py  constants.py  llm_generator.py  models.py  utils.py
stacks/: __init__.py  api_stack.py  cache_stack.py  frontend_stack.py  monitoring_stack.py  network_stack.py  pipeline_stack.py  processing_stack.py  search_stack.py  security_stack.py  storage_stack.py
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_cache_service.py  test_chunker_handler.py  test_document_handler.py  test_embedding_generator_handler.py  test_evaluator_handler.py  test_health_handler.py  test_ingest_trigger_handler.py  test_llm_generator.py  test_metadata_enricher_handler.py  test_metrics_handler.py  test_query_handler.py  test_shared_constants.py  test_shared_models.py  test_shared_utils.py  test_text_extractor_handler.py  test_validator_handler.py  test_vector_indexer_handler.py
(+20 files in other folders)
